external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_const_name_match.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E02010]: invalid name
  ┌─ tests/move_2024/matching/invalid_const_name_match.move:9:20
  │
9 │             S { n: Z } => 0,
  │                    ^ Invalid pattern variable name 'Z'. Pattern variable names must start with 'a'..'z' or '_'
  │
  = The compiler may have failed to resolve this constant's name
